<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/heading1"
        android:textColor="@color/black"
        android:background="@color/textBackground"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/heading2"
        android:textColor="@color/black"
        android:background="@color/textBackground"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:backgroundTint="@color/buttonBackground"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selected_date"
        android:textColor="@color/black"
        android:background="@color/textBackground"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/Default_Selected_Date"
        android:textColor="@color/result"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selected_date_in_min"
        android:textColor="@color/black"
        android:background="@color/textBackground"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/Default_Date_In_Min"
        android:textColor="@color/result"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:textColor="@color/black"
        android:background="@color/textBackground"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/Default_Age"
        android:textColor="@color/result"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>